--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,7 @@
                                     <fileset dir="src/main/resources/conf" includes="config.yml"/>
                                 </copy>
                                 <copy todir="${target.dir}">
-                                    <fileset dir="${build.directory}"
+                                    <fileset dir="${project.build.directory}"
                                              includes="${project.artifactId}.${project.packaging}"/>
                                 </copy>
                                 <zip destfile="${target.dir}-${project.version}.zip">
